# lcd-weather-cpp

./: .gitmodules  CMakeLists.txt
cross_targets/: aarch64-unknown-linux-gnu.cmake
src/: .clangd  lcd-weather.cpp  weather_format.hpp
