cmake_minimum_required(VERSION 3.11..4.0)
project(lcd-weather)
add_executable(lcd-weather src/lcd-weather.cpp)
target_compile_features(lcd-weather PUBLIC cxx_std_23)
add_subdirectory(deps/curl)
add_subdirectory(deps/wolfssl)
add_subdirectory(deps/abseil-cpp)
add_subdirectory(deps/glaze)
option(BUILD_STATIC_LIBS on)
option(BUILD_SHARED_LIBS off)
target_link_libraries(lcd-weather PRIVATE CURL::libcurl_static absl::cleanup glaze::glaze)
