cmake_minimum_required(VERSION 3.11..4.0)
project(lcd-weather)
add_executable(lcd-weather src/lcd-weather.cpp)
target_compile_features(lcd-weather PUBLIC cxx_std_23)
find_package(glaze REQUIRED)
find_package(CURL REQUIRED)
find_package(absl REQUIRED)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
target_link_libraries(lcd-weather CURL::libcurl absl::cleanup glaze::glaze)
